CHANGELOG
=========

1.1.2 (2016-06-29)
------------------

* Pinned to djangocms-attributes-field v0.1.0
* Fixed model name used in migration
* Fixed an issue with folder plugin in Django 1.9


1.1.1 (2016-06-22)
------------------

* Updated requirements for Django Filer to >= 1.2.0
* Fixed an issue with thumbnail options migrations


1.1.0 (2016-06-21)
------------------

* Move ThumbnailOption to filer
* Move migrations to proper layout
* Put django's AppConfig for nice name in django admin
* Add swappable dependency to initial migration
* Add img-responsive class if automatic scaling
* Add center image alignment
* Implements AttributesField

1.0.1 (2016-01-14)
------------------

* Fixes flake8 warnings
* Changed internal project links to point to new repo url
* Set on_delete to all plugins with relationships to filer models
* Set file field as nullable in file plugin
* Set folder field as nullable in folder plugin


1.0.0 (2015-11-03)
------------------

* Pin requirements for Django-Filer to >= 1.0.0
* Improve test coverage
* Fix icon_src / remove references of FILER_STATICMEDIA_PREFIX
* XSS fix
* Fix path names for storage backends
* Fix migrations
* Update README


0.10.2 (2015-07-28)
------------------

* bugfixes
* better Django 1.7 and 1.8 support
* migration fixes


0.10.1 (2014-11-03)
------------------

* bugfixes
* python 3.3 compatibility fixes
* experimental Django 1.7 support (requires django-cms 3.0.7 or the support/3.0.x branch)

0.10 (2014-09-08)
------------------

* django-cms 3.0 style table rename (breaks compatibility to django-cms 2.x)
* python 3.3 compatibility fixes


0.9.9 (2014-06-05)
------------------

* fixes bug in migrations

0.9.8 (2014-06-04) BROKEN!
--------------------------

* fixes bug that prevents using the new template structure

0.9.7 (2014-06-03) BROKEN!
--------------------------

* bugfixes
* support for configurable styles (templates) on image, file, folder and teaser plugin
* many bugfixes

0.9.5 (2013-04-09)